--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,9 +30,18 @@ services:
     depends_on:
       - backend
 
+  sqlite-web:               # 👈 Added new service
+    image: coleifer/sqlite-web
+    container_name: sqlite-web
+    volumes:
+      - ./backend/data:/data
+    ports:
+      - "8081:8080"
+    command: sqlite_web --host 0.0.0.0 /data/dev.sqlite3
+    depends_on:
+      - backend
+
 volumes:
   backend_node_modules:
   frontend_node_modules:
   backend_data:
-
-
